[gd_scene load_steps=4 format=3 uid="uid://bh3twa4qgp44j"]

[ext_resource type="FontFile" uid="uid://nj5b3hat322u" path="res://Fonts/04B_30__.TTF" id="1_eci66"]
[ext_resource type="Script" path="res://LevelComplete.gd" id="1_m00s8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pgs73"]
bg_color = Color(0, 0, 0, 1)

[node name="LevelCompleteDisplay" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m00s8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.478431, 0.478431, 0.478431, 0.698039)

[node name="LevelCompleteText" type="Label" parent="."]
layout_mode = 0
offset_top = 46.0
offset_right = 1153.0
offset_bottom = 217.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("1_eci66")
theme_override_font_sizes/font_size = 50
text = "LEVEL COMPLETE!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreText" type="Label" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = 112.0
offset_right = 1151.0
offset_bottom = 283.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("1_eci66")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 293.0
offset_top = 245.0
offset_right = 812.0
offset_bottom = 459.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.62
theme_override_constants/separation = 18

[node name="NextLevelButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_eci66")
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxFlat_pgs73")
text = "Level Select"

[node name="ViewLeaderBoardButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_eci66")
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxFlat_pgs73")
text = "View Leaderboard"

[node name="ViewLeaderBoardButton2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_eci66")
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxFlat_pgs73")
text = "Main Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ViewLeaderBoardButton" to="." method="_on_view_leader_board_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ViewLeaderBoardButton2" to="." method="_on_view_leader_board_button_2_pressed"]
